# nexus-code---cpp-0

./: CMakeLists.txt  README.md  install.sh
assets/: nexus-code.desktop
config/: config.example.json
include/: agent.hpp  api.hpp  banner.hpp  commands.hpp  common.hpp  config.hpp  history.hpp  http.hpp  logger.hpp  memory.hpp  tools.hpp  ui.hpp  util.hpp
src/: agent.cpp  api.cpp  commands.cpp  config.cpp  history.cpp  http.cpp  logger.cpp  main.cpp  memory.cpp  tools.cpp  util.cpp
